<resources>
    <string name="app_name">Kahago</string>
    <string name="login">Login</string>
    <string name="login_caption">Silahkan masukan data anda</string>
    <string name="email_input_placeholder">Masukkan Email</string>
    <string name="password_input_placeholder">Masukkan Password</string>
    <string name="forgot_password">Lupa Password</string>
    <string name="dont_have_account">Belum punya akun Kahago ?</string>
    <string name="register_now">Daftar Sekarang</string>
    <string name="register">Daftar</string>
</resources>